[project]
authors = [{name = "Will Taylor"}]
description = "My Advent of Code repository"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]
keywords = ["Advent of Code"]

[tool.black]
line-length = 79
target-version = ["py310"]

[tool.ruff]
line-length = 79
target-version = "py310"